newsfeed func impl & pagenation impl